feat: adiciona mais informações aos metadados da imagem
